tests/snapshots/run_file__tup_list_strings.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/tup_list_strings.bend
---
NumScott:
{[{"foo" 0}, {"foo" 0}, {"foo" 1}] 4}

Scott:
{[{"foo" 0}, {"foo" 0}, {"foo" 1}] 4}
