tests/snapshots/run_file__tup_list_strings.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/tup_list_strings.hvm
---
Lazy mode:

([("foo", 0), ("foo", 0), ("foo", 1)], 4)

Strict mode:

([("foo", 0), ("foo", 0), ("foo", 1)], 4)
