tests/snapshots/run_file__tup_reconstruction.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/tup_reconstruction.bend
---
λa a
