tests/snapshots/run_file__tuple_rots.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/tuple_rots.hvm
---
λa (a 5 6 7 8 1 2 3 4)
