tests/snapshots/run_file__unaplied_str.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/unaplied_str.hvm
---
λa λb λc λ* (c a λd λ* (d 98 λe λ* (e 99 λf λ* (f b String.nil))))
