tests/snapshots/run_file__unscoped_never_used.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/unscoped_never_used.bend
---
[4m[1m[31mErrors:[0m
[1mIn definition '[4mmain[0m[1m':[0m
  Unscoped variable from lambda 'λ$x' is never used.
